--- a/package.json
+++ b/package.json
@@ -75,5 +75,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not op_mini all",
+    "not safari < 15"
+  ]
 }
